fix mast on mobile

--- a/source/stylesheets/_js.scss
+++ b/source/stylesheets/_js.scss
@@ -1,8 +1,8 @@
 .js .js-toggle {
-  // backface-visibility: hidden;
+  backface-visibility: hidden;
   // display: block;
   // overflow: hidden;
-  // transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   // transition-duration: .3s;
   // transition-property: width, visibility;
   // transition-timing-function: ease-in-out;
